cli/tests/commands/snapshots/commands__fixture__check_with_super_mirror.snap
---
source: cli/tests/commands/fixture.rs
description: btrfs check --super 0 <IMG> (stdout)
expression: stdout
---
found 1564672 bytes used, no error found
total csum bytes: 1000
total tree bytes: 540672
total fs tree bytes: 409600
total extent tree bytes: 16384
btree space waste bytes: 211251
file data blocks allocated: 1024000
 referenced 32768
