cli/tests/commands/snapshots/commands__fixture__device_stats.snap
---
source: cli/tests/commands/fixture.rs
description: btrfs device stats <MOUNT>
expression: "redact_paths(&btrfs_ok(&[\"device\", \"stats\", mp]), &mnt)"
---
[<DEV>].write_io_errs            0
[<DEV>].read_io_errs             0
[<DEV>].flush_io_errs            0
[<DEV>].corruption_errs          0
[<DEV>].generation_errs          0
