cli/tests/commands/snapshots/commands__fixture__device_usage_gbytes.snap
---
source: cli/tests/commands/fixture.rs
description: btrfs device usage --gbytes <MOUNT>
expression: "redact_paths(&btrfs_ok(&[\"device\", \"usage\", \"--gbytes\", mp]), &mnt)"
---
<DEV>, ID: 1
   Device size:                  0
   Device slack:                 0
   Data,single:                  0
   Metadata,DUP:                 0
   System,DUP:                   0
   Unallocated:                  0
